# BridgeAI

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: circuit_breaker.py  collaboration.py  memory.py  model_router.py
backend/app/channels/: __init__.py  base.py  dingtalk_bot.py  feishu_bot.py  manager.py  wechat_work.py
backend/app/core/: database.py  exceptions.py  redis.py  security.py  tenant_filter.py
backend/app/engine/: agent_pipeline.py  context_parser.py  feedback_loop.py  prompt_optimizer.py
backend/app/mcp/: gateway.py  masking.py
backend/app/middleware/: content_filter.py  rate_limit.py  security.py  sensitive_words.txt  tenant.py
backend/app/models/: __init__.py  agent.py  audit.py  base.py  conversation.py  knowledge.py  mcp.py  notification.py  payment.py  plugin.py  user.py  workflow.py
backend/app/plugins/: __init__.py  base.py  loader.py  registry.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  ollama_provider.py  openai_compat_provider.py  qwen_provider.py  registry.py
backend/app/rag/: chunker.py  embeddings.py  engine.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: deploy.sh  seed_data.py
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_circuit_breaker.py  test_context_parser.py  test_feedback_loop.py  test_masking.py  test_memory.py  test_model_router.py  test_prompt_optimizer.py  test_rag_chunker.py
(+187 files in other folders)
