[project]
name = "bridgeai-backend"
version = "0.1.0"
description = "BridgeAI - Intelligent Agent Platform Backend"
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
